v0.13
	* ADD : Single-node splitting of roads even with a connection to the extremity of another road (by Yves Goergen) (closes #1419)
	* FIX : Declutter - move translations to a seperate directory.
	* ADD : Custom Qt style (skulpture by Christoph Feck) to bypass Qt expanding dock problem on linux. Enable via preferences-visual. (fixes #1482)
	* FIX : Allow port number in WMS/TMS server address (fixes #1479)
	* ADD : Save relative icon filenames in map styles if not builtin (closes #1463) 
	* FIX : Don't loose selection(s) on "download more" (fixes #1470)
	* FIX : Make at least docks translated after a restart (refs #1432)
	* FIX : Do not re-sort features when zooming or when latitude changes.
	* FIX : Make "Resolve Relations" work as intended (fixes #1449)
	* FIX : Don't snap to the road being moved (by Yves Goergen)
	* ADD : Merge multiple nodes when dragging one node onto another (by Yves Goergen)
	* FIX : Don't jump around on Download More
	* FIX : Remember last selected preferences tab page (not stored over an application restart) (by Yves Goergen)
	* FIX : Look into application directory for translations by default (by Yves Goergen; fixes #1297)
	* FIX : Don't draw the node dot if there is an icon (by Yves Goergen)
	* FIX : Make sure areas are rendered before anything else.
	* FIX : Add NVIDIA_HACK in Config.pri to (hopefully) help with Nvidia slowdowns.
	* FIX : Cache preferences values for quicker access.
	* FIX : Crash wen reloading MDC when no layer specified in the command XML (fixes #1434)
	* ADD : "Offline" mode switch.
	* ADD : Add a "Separate Move Mode" preference to remove "Move" mode. Moving features will be done from the "Edit" mode if deactivated.
	* ADD : "Node" - "Detach" to remove a node from a road. Works the same way as "Split"
	* FIX : Make Osmarender work again
	* ADD : Area transparency
	* ADD : Allow on-the-fly language change
	* ADD : Remember tag view first column size
	* FIX : Allow up to 999Mb for background image cache